feat: add question availability and student foundation